# mol-dm050

./: .gitignore  Makefile  README.md  env.template
backend/: .gitignore  DM050_domain_description.txt  README.md  console.py  console_impl.py  pyproject.toml  shell.py  shell_impl.py  start.py
backend/api/: __init__.py  api.py  dto.py  log_conf.yml  questions.txt  test_api.py
backend/blockz/: LLMBlockz.py
backend/dm050/: imperative-dd.txt  prefix.txt  setup.py  shell.py  shellutils.py
backend/langutils/: __init__.py  context.py  llm_tools.py  open_ai.py  unit_test.py
backend/redmine/: chart_test.py  context.py  issues.csv  issues_ddl.sql  llm_tools.py  members.csv  members_ddl.sql  open_ai.py  projects.csv  projects_ddl.sql  time_entries.csv  time_entries_ddl.sql  tools.py  unit_test.py  users.csv  users_ddl.sql
backend/shell/: __init__.py  llm.py  shell.py  tools.py
backend/t2sqltools/: __init__.py  tools.py
backend/test_shell/: __init__.py  llm.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
docker/dev/: .dockerignore  Dockerfile  docker-compose.yml
frontend/: README.md  index.html  package-lock.json  package.json  theme.ts  tsconfig.app.json  types.ts  vite.config.ts
frontend/src/: App.tsx  custom.d.ts  main.tsx  test.html
frontend/src/api/: api.ts
frontend/src/components/: BulletItem.tsx  ChatBubble.tsx  ChatInput.tsx  DataTable.tsx  EmptyState.tsx  ErrorComponent.tsx  ExampleQuestionCard.tsx  LiquidGlass.tsx  MolTriangleLoader.tsx  MotionWrapper.tsx  SimpleBubble.tsx  htmlSegments.ts  styled.ts
frontend/src/config/: menu.tsx
(+10 files in other folders)
