[project]
name = "dm050"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiostomp>=1.7.3",
    "fastapi>=0.116.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.5",
    "openai>=1.98.0",
    "pandas>=2.3.1",
    "pyyaml>=6.0.2",
    "tabulate>=0.9.0",
    "uvicorn[standard]>=0.35.0",
    "websocket-client>=1.8.0",
]
